# nn-template

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  env.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  versions.json
.github/workflows/: publish.yml  publish_docs.yml  test_suite.yml
0.2/: 404.html  index.html  sitemap.xml
0.2/changelog/: index.html
0.2/changelog/upgrade/: index.html
0.2/features/bestpractices/: index.html
0.2/features/cicd/: index.html
0.2/features/conda/: index.html
0.2/features/determinism/: index.html
0.2/features/docs/: index.html
0.2/features/envvars/: index.html
0.2/features/fastdevrun/: index.html
0.2/features/metadata/: index.html
0.2/features/nncore/: index.html
0.2/features/precommits/: index.html
0.2/features/pypi/: index.html
0.2/features/restore/: index.html
0.2/features/storage/: index.html
0.2/features/tags/: index.html
0.2/features/tests/: index.html
0.2/getting-started/: index.html
0.2/getting-started/generation/: index.html
0.2/getting-started/structure/: index.html
0.2/integrations/dvc/: index.html
0.2/integrations/githubactions/: index.html
0.2/integrations/hydra/: index.html
0.2/integrations/lightning/: index.html
0.2/integrations/mkdocs/: index.html
0.2/integrations/streamlit/: index.html
0.2/integrations/wandb/: index.html
0.2/papers/: index.html
0.2/project-structure/: index.html
0.2/project-structure/conf/: index.html
0.2/project-structure/structure/: index.html
0.2/search/: search_index.json
0.2/upgrade/: index.html
0.3.0/: 404.html  index.html
0.3.0/changelog/: index.html
0.3.0/changelog/upgrade/: index.html
0.3.0/features/bestpractices/: index.html
0.3.0/features/cicd/: index.html
0.3.0/features/conda/: index.html
0.3.0/features/determinism/: index.html
0.3.0/features/docs/: index.html
0.3.0/features/envvars/: index.html
0.3.0/features/fastdevrun/: index.html
0.3.0/features/metadata/: index.html
0.3.0/features/nncore/: index.html
0.3.0/features/restore/: index.html
0.3.0/features/storage/: index.html
0.3.0/features/tags/: index.html
0.3.0/features/tests/: index.html
0.3.0/getting-started/: index.html
0.3.0/getting-started/generation/: index.html
0.3.0/integrations/dvc/: index.html
0.3.0/integrations/githubactions/: index.html
0.3.0/integrations/hydra/: index.html
0.3.0/integrations/lightning/: index.html
0.3.0/integrations/mkdocs/: index.html
0.3.0/integrations/streamlit/: index.html
0.3.0/integrations/wandb/: index.html
0.3.0/papers/: index.html
0.3.0/project-structure/: index.html
0.3.0/search/: search_index.json
0.4/: 404.html  index.html
0.4/changelog/: index.html
0.4/getting-started/: index.html
0.4/papers/: index.html
0.4/project-structure/: index.html
0.4/search/: search_index.json
conf/: default.yaml
conf/data/: default.yaml  default_data.yaml
conf/hydra/: default.yaml  default_hydra.yaml
conf/logging/: default.yaml  default_logging.yaml
conf/model/: default.yaml  default_model.yaml
conf/nn/: default.yaml
conf/optim/: default.yaml
conf/train/: default.yaml  default_train.yaml
docs/: changelog.md  index.md  papers.md  upgrade.md
docs/changelog/: index.md
docs/features/: bestpractices.md  cicd.md  conda.md  determinism.md  docs.md  envvars.md  fastdevrun.md  metadata.md  nncore.md  restore.md  storage.md  tags.md  tests.md
docs/getting-started/: generation.md  index.md  structure.md
docs/integrations/: dvc.md  githubactions.md  hydra.md  lightning.md  mkdocs.md  streamlit.md  wandb.md
docs/project-structure/: structure.md
hooks/: post_gen_project.py
latest/changelog/: index.html
latest/getting-started/: index.html
latest/overrides/: main.html
latest/papers/: index.html
latest/project-structure/: index.html
latest/upgrade/: index.html
src/: run.py
src/common/: utils.py
src/data/: datamodule.py  dataset.py
src/modules/: model.py
src/nn_template/: __init__.py  run.py
src/pl_data/: datamodule.py  dataset.py
src/pl_datamodules/: datamodule.py
src/pl_modules/: model.py
src/ui/: run.py  ui_utils.py
tests/: conftest.py  test_cfg.py  test_checkpoint.py  test_configuration.py  test_nn_core_integration.py  test_resume.py  test_storage.py  test_training.py
{{ cookiecutter.repository_name }}/: .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env.yaml  mkdocs.yml  pyproject.toml  setup.cfg
{{ cookiecutter.repository_name }}/.github/workflows/: publish.yml  test_suite.yml
{{ cookiecutter.repository_name }}/conf/: default.yaml
{{ cookiecutter.repository_name }}/conf/hydra/: default.yaml
{{ cookiecutter.repository_name }}/conf/nn/: default.yaml
{{ cookiecutter.repository_name }}/conf/nn/data/: default.yaml
{{ cookiecutter.repository_name }}/conf/nn/data/dataset/vision/: mnist.yaml
{{ cookiecutter.repository_name }}/conf/nn/module/: default.yaml
{{ cookiecutter.repository_name }}/conf/nn/module/model/: cnn.yaml
{{ cookiecutter.repository_name }}/conf/train/: default.yaml
{{ cookiecutter.repository_name }}/docs/overrides/: main.html
{{ cookiecutter.repository_name }}/overrides/: main.html
{{ cookiecutter.repository_name }}/src/nn_template/: __init__.py
{{ cookiecutter.repository_name }}/src/nn_template/data/: dataset.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/: __init__.py  run.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/data/: datamodule.py  dataset.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/modules/: module.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/pl_modules/: pl_module.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/ui/: run.py
{{ cookiecutter.repository_name }}/src/{{ cookiecutter.package_name }}/utils/: hf_io.py
{{ cookiecutter.repository_name }}/tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py  test_seeding.py  test_storage.py
(+61 files in other folders)
