[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-ra --cov=nn_template"
testpaths = ["tests"]

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "120"

[tool.mypy]
files= ["src/**/*.py", "test/*.py"]
ignore_missing_imports = true

[tool.isort]
profile = 'black'
line_length = 120
known_local_folder = "nn_template"

[tool.setuptools_scm]
write_to = "src/nn_template/_version.py"
write_to_template = '__version__ = "{version}"'

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

