[metadata]
name = nn-template
description = To be parametrized
long_description = file: README.md
author = xxx
author_email = yyy
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
;    nn-template-core>=0.0.1,<1.0.0
    # TODO: delete git dependency on core release
    nn-template-core @  git+https://github.com/Flegyas/nn-template-core@develop

    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning>=1.5.8,<1.6
    hydra-core
    wandb
    streamlit
    # hydra-joblib-launcher

    # Stable stuff usually backward compatible
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
# Test dependencies
test =
    pytest
    pytest-cov

# Development dependencies
dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
